// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--default text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      default
    </span>
  </span>
  <span
    class="tag tag--go text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      go
    </span>
  </span>
  <span
    class="tag tag--yield text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="tag tag--stop text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      stop
    </span>
  </span>
  <span
    class="tag tag--warning text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="tag tag--brand text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="tag tag--default text text--sm text--bold-weight"
>
  ​
  <span
    class="tag__body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--default tag--outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      default
    </span>
  </span>
  <span
    class="tag tag--go tag--outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      go
    </span>
  </span>
  <span
    class="tag tag--yield tag--outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="tag tag--stop tag--outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      stop
    </span>
  </span>
  <span
    class="tag tag--warning tag--outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="tag tag--brand tag--outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;
